--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1056,8 +1056,10 @@ From {{der|smr|poz-pro|*əpat}}, from {{der|smr|map-pro|*Səpat}}.
 #: {{syn|tl|saka}}
 
 ===See also===
+* {{l|tl|saka}}
 * {{l|tl|at saka}}
 * {{l|tl|t'saka}}
+* {{l|tl|tsaka}}
 
 ----
 
