ce, bad not even mentioned in most dictionaries <bid#60417296>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -33,9 +33,9 @@ From {{der|en|enm|bidden}}, from the {{der|en|ang|-}} verb {{m|ang|biddan||ask, 
 =====Usage notes=====
 The inflected forms {{m|en|bade}}, {{m|en|bad}}, and {{m|en|bidden}} are archaic. They remain in marginal use, particularly regarding greetings, as in “bade farewell”, but uninflected '''bid''' is significantly more common, and {{m|en||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>
 
-When it does occur, it is usually in an elevated, ironical or metaphorical style e.g "I have '''bidden''' farewell to my prospects of promotion."
+When ''bidden'' does occur, it is usually in an elevated, ironical, or metaphorical style, e.g "I have '''bidden''' farewell to my prospects of promotion."
 
-When '''bade''' or '''bad''' is used in formal speech the pronunciation {{IPAchar|/bæd/}} may be heard. However, when a dated text is being read or recited (e.g. on stage, in school or in church etc.) {{IPAchar|/beɪd/}} is quite usual.
+When '''bade''' (spelled '''bad''' so rarely it's not mentioned in most dictionaries) is used in formal speech, the pronunciation {{IPAchar|/bæd/}} may be heard. However, when a dated text with the spelling ''bade'' is read aloud or recited (e.g. on stage, in school, or in church etc.) the [[spelling pronunciation]] {{IPAchar|/beɪd/}} is quite usual.
 
 =====Derived terms=====
 * {{l|en|bid adieu}}
