--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -943,6 +943,21 @@ From {{der|xpo|azc-nah-pro|*aatl}}, from {{der|xpo|azc-pro|*pa|*pa-ta}}.
 
 ----
 
+==Pnar==
+
+===Etymology===
+From {{inh|pbv|aav-khs-pro|*ʔa:t}}, from {{der|pbv|mkh-pro|*as|*as ~ ʔəs}}. Cognate with {{cog|kha|at}}, {{cog|ril|-}} [Sak] ''ʔas¹'', {{cog|nev|-}} ''ʔaːjh'', {{cog|pac|ayh}}, {{cog|sea|as}}.
+
+===Pronunciation===
+* {{IPA|pbv|/at/}}
+
+===Verb===
+{{head|pbv|verb}}
+
+# to [[swell]]
+
+----
+
 ==Scots==
 
 ===Preposition===
