--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -51,7 +51,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Georgian: {{t|ka|ყარყუმი}}
 * German: {{t+|de|Hermelin|n}}
 * Greek: {{t+|el|ερμίνα|f}}
-* Hungarian: {{t+|hu|hermelin}}
+* Hungarian: {{t+|hu|hermelin}}, {{t|hu|hölgymenyét}}
 * Icelandic: {{t+|is|hreysiköttur|m}}
 * Interlingua: {{t|ia|armenio}}
 * Interlingue: {{t|ie|hermeline}}
