/* Translations */ Added Plautdietsch translation. <bent#60420577>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -68,6 +68,7 @@ From {{suffix|en|bend|t}}.
 * Latin: {{t|la|curvus}}
 * Maori: {{t|mi|rōiho}} {{qualifier|of an old person}}, {{t|mi|kōtuke }}, {{t|mi|kokopa}}, {{t|mi|piko}}, {{t|mi|korotuke}}, {{t|mi|korotuketuke}}
 * Mongolian: {{t-needed|mn}}
+* Plautdietsch: {{t|pdt|kromm}}
 * Portuguese: {{t+|pt|torto}}
 * Quechua: {{t|qu|wist'u}}
 * Romanian: {{t+|ro|gârbov}}, {{t+|ro|îndoit}}
