--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -75,7 +75,7 @@ Various alternative etymologies have also been proposed:
 # moon-[[shaped]] [[object]]s
 # {{lb|zh|literary}} [[moonlight]]
 # [[month]] {{zh-mw|個}}
-#: {{zh-syn|月份|號頭|q2=Wu}}
+#: {{zh-syn|月份|號頭|q2=Wu|t2=-}}
 # [[monthly]]
 #: {{zh-x|月薪|'''monthly''' wage}}
 # {{zh-classifier|months}}
