--- a/en/o/overbridges.775471.wikitext
+++ b/en/o/overbridges.775471.wikitext
@@ -6,3 +6,8 @@
 {{head|en|noun form}}
 
 # {{plural of|en|overbridge}}
+
+===Verb===
+{{head|en|verb form}}
+
+# {{en-third-person singular of|overbridge}}
