/* Translations */ Added Plautdietsch translation. <bet#60438421>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -52,6 +52,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Maltese: {{t|mt|mħatra}}
 * Norman: {{t|nrf|gageaille|f}}
 * Norwegian: {{t|no|veddemål|n}}
+* Plautdietsch: {{t|pdt|Wad|f}}
 * Polish: {{t+|pl|zakład|m}}
 * Portuguese: {{t+|pt|aposta}}
 * Russian: {{t+|ru|ста́вка|f}}, {{t+|ru|закла́д|m}}, {{t+|ru|пари́|n}}
