--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -14,8 +14,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 {{en-adj|er|more}}
 
 # [[uncomplicated|Uncomplicated]]; taken by itself, with nothing added.
-#* {{RQ:EHough PrqsPrc|I|0088}}
-#*: “[…] We are engaged in a great work, a treatise on our river fortifications, perhaps? But since when did army officers afford theluxury of amanuenses in this '''simple''' republic?{{nb...}}”
+#* {{RQ:EHough PrqsPrc|I|12|“[…] We are engaged in a great work, a treatise on our river fortifications, perhaps? But since when did army officers afford the luxury of amanuenses in this '''simple''' republic?{{nb...}}”}}
 #* '''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press {{ISBN|0-521-78512-X}}, page 167,
 #*: There is no '''simple''' way to define precisely a complex arrangement of parts, however homely the object may appear to be.
 # Without [[ornamentation]]; [[plain]].
@@ -43,7 +42,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ##: {{ux|en|a '''simple''' ascidian}}
 ## {{lb|en|mineralogy}} [[homogenous|Homogenous]].
 # {{lb|en|obsolete}} Mere; not other than; being only.
-#*{{RQ:Shakespeare All's Well|act=II|scene=i|passage=A medicine{{...}}whose '''simple''' touch / Is powerful to araise King Pepin.}}
+#* {{RQ:Shakespeare All's Well|act=II|scene=i|passage=A medicine{{...}}whose '''simple''' touch / Is powerful to araise King Pepin.}}
 
 ====Synonyms====
 * {{sense|consisting of a single part or aspect}} {{l|en|onefold}}
@@ -237,7 +236,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 # {{lb|en|obsolete|by extension}} A [[physician]].
 # {{lb|en|logic}} A simple or atomic [[proposition]].
 # {{lb|en|obsolete}} Something not [[mixed]] or [[compounded]].
-#*{{RQ:Shakespeare As You Like It|act=IV|scene=i|passage=But it is a melancholy of mine own, compounded of many '''simples''', extracted from many objects, and indeed the sundry contemplation of my travels}}
+#* {{RQ:Shakespeare As You Like It|act=IV|scene=i|passage=But it is a melancholy of mine own, compounded of many '''simples''', extracted from many objects, and indeed the sundry contemplation of my travels}}
 # {{lb|en|weaving}} A [[drawloom]].
 # {{lb|en|weaving}} Part of the [[apparatus]] for raising the [[heddle]]s of a [[drawloom]].
 # {{lb|en|Roman Catholic}} A [[feast]] which is not a [[double]] or a [[semidouble]].
