--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -92,6 +92,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |trouble at t' mill
 |watermill
 |windmill
+|Woodhouse Mill
 }}
 
 =====Descendants=====
