--- a/en/s/sparra.720255.wikitext
+++ b/en/s/sparra.720255.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{eye dialect of|en|sparrow|from=Cockney}}
+{{pronunciation spelling of|en|sparrow|from=Cockney}}
 
 ===Noun===
 {{en-noun}}
