/* Translations */ Added Plautdietsch translation. <fraction#60475733>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -84,6 +84,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Macedonian: {{t|mk|дел|m}}, {{t|mk|делче|n}}
 * Maori: {{t|mi|hautanga}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}
+* Plautdietsch: {{t|pdt|Bruchdeel|n}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Romanian: {{t+|ro|fracție}}
