t+bg:[[млечка]] ([[WT:EDIT|Assisted]]) <milkweed#60476165>

--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -21,6 +21,7 @@
 
 ====Translations====
 {{trans-top|a plant}}
+* Bulgarian: {{t|bg|млечка|f}}
 * German: {{t|de|Seidenpflanze|f}}
 * Irish: {{t|ga|lus bleachta|m}}
 {{trans-mid}}
