--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -20,15 +20,32 @@
 * {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed}} ({{taxlink|Asclepias syriaca|species|noshow=1|ver=161014}}), {{vern|clasping milkweed}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1|ver=161014}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed}} ({{taxlink|Asclepias quadrifolia|species|noshow=1|ver=161014}}), {{vern|green comet milkweed}} (''[[Asclepias viridiflora]]''), {{vern|poke milkweed}} ({{taxlink|Asclepias exaltata|species|noshow=1|ver=161014}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|noshow=1|ver=161014}}), {{vern|red milkweed}} ({{taxlink|Asclepias rubra|species|noshow=1|ver=161014}}), {{vern|redring milkweed}} ({{taxlink|Asclepias variegata|species|noshow=1|ver=161014}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed}} ({{taxlink|Asclepias verticillata|species|noshow=1|ver=161014}})
 
 ====Translations====
-{{trans-top|a plant}}
-* Bulgarian: {{t|bg|млечка|f}}
+{{trans-top|plant of the genus ''Asclepias''}}
+* Finnish: {{t|fi|silkkiyrtti}}
 * German: {{t|de|Seidenpflanze|f}}
-* Irish: {{t|ga|lus bleachta|m}}
 {{trans-mid}}
 * Italian: {{t|it|asclepiade|f}}
-* Maori: {{t|mi|kaikaiatua}}
-* Northern Ohlone: {{t|cst|šiska}}
 * Polish: {{t|pl|trojeść|f}}
+{{trans-bottom}}
+
+{{trans-top|plant of the genus ''Calotropis''}}
+* Finnish: {{t|fi|madari}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|plant ''Euphorbia peplus''}}
+* Finnish: {{t|fi|kolmisädetyräkki}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|monarch butterfly}}
+
+{{checktrans-top}}
+* Bulgarian: {{t-check|bg|млечка|f}} <!-- Was under "plant" - unclear which -->
+* Irish: {{t-check|ga|lus bleachta|m}} <!-- Was under "plant" - unclear which -->
+{{trans-mid}}
+* Maori: {{t-check|mi|kaikaiatua}} <!-- Was under "plant" - unclear which -->
+* Northern Ohlone: {{t-check|cst|šiska}} <!-- Was under "plant" - unclear which -->
 {{trans-bottom}}
 
 ===References===
