--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -171,6 +171,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 
 {{trans-top|slender hairy man}}
 * Finnish: {{t+|fi|apina}}
+* Georgian: {{t|ka|წავი}}, {{t|ka|მგელი}} {{qualifier|literally "wolf"}}
 * Japanese: {{t+|ja|熊|tr=くま, kuma}}
 {{trans-mid}}
 * Navajo: {{t|nv|ditłʼoiitsʼózí}}
