--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -66,11 +66,13 @@ Abbreviation of various terms and phrases.
 * French: {{t+|fr|CD|m}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|CD|f}}
-{{trans-mid}}
 * Greek: {{t+|el|CD|n}}
 * Hindi: {{t|hi|सीडी|sc=Deva}}
+{{trans-mid}}
 * Japanese: {{t|ja|シーディー|tr=sīdī}}, {{t+|ja|CD|tr=sīdī}}
+* Khmer: {{t|km|ស៊ីឌី}}
 * Korean: {{t+|ko|시디}}
+* Lao: {{t|lo|ຊີ​ດີ}}
 * Macedonian: {{t|mk|це-де|n}}
 * Malay: {{t|ms|CD}}
 * Mòcheno: {{t|mhn|CD|f}}
