--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -78,7 +78,7 @@ Abbreviation of various terms and phrases.
 * Mòcheno: {{t|mhn|CD|f}}
 * Persian: {{t|fa|سی‌دی|tr=si-di|sc=fa-Arab}}
 * Portuguese: {{t+|pt|CD|m}}
-* Russian: {{t+|ru|CD|m}}, {{t|ru||alt=си-ди́|m}}
+* Russian: {{t|ru||m|alt=CD|tr=-}}, {{t|ru||alt=си-ди́|m}}
 * Spanish: {{t+|es|CD|m}}
 * Swedish: {{t+|sv|CD|c}}
 * Thai: {{t+|th|ซีดี}}
