--- a/en/h/homodyne.775811.wikitext
+++ b/en/h/homodyne.775811.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|physics|of radiation}} Pertaining to two waves which originate from a single radiation source, or have exactly the same frequency
+# {{lb|en|physics|of radiation}} Pertaining to two waves which originate from a single radiation source, or have exactly the same frequency.
 
 ====Related terms====
 * {{l|en|heterodyne}}
