--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -22,7 +22,8 @@
 # {{lb|en|countable}} {{abbreviation of|en|field marshal}}
 # {{lb|en|countable}} {{abbreviation of|en|finance minister}}
 # {{lb|en|countable}} {{abbreviation of|en|foreign minister}}
-# {{lb|en|countable}} {{abbreviation of|en|FIDE Master}}
+# {{lb|en|countable}} {{abbreviation of|en|field manual}}
+# {{lb|en|countable}} {{abbreviation of|en|{{w|FIDE Master}}}}
 
 ===Anagrams===
 * {{anagrams|en|a=fm|M-F|MF}}
