--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -14,8 +14,9 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 {{en-noun}}
 
 # A [[spherical]]ly [[contained]] [[volume]] of air or other gas, especially one made from [[soapy]] liquid.
+#: {{ant|en|antibubble}}
 # A small spherical [[cavity]] in a solid material.
-#: '''''bubbles''' in window glass, or in a lens''
+#: {{ux|en|'''bubbles''' in window glass, or in a lens}}
 # Anything resembling a [[hollow]] sphere.
 # {{lb|en|economics}} A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts (e.g. the {{w|South Sea Bubble}}).
 # An officer's station in a prison dormitory, affording views on all sides.
@@ -36,18 +37,13 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # Anything lacking firmness or solidity; a cheat or fraud; an empty project.
 #*{{RQ:Shakespeare As You Like It|act=II|scene=vii|passage=Then a soldier {{...}} / Seeking the '''bubble''' reputation / Even in the cannon's mouth}}
 # {{lb|en|Cockney rhyming slang}} A [[laugh]] (''also:'' [[bubble bath]]).
-#: ''Are you having a '''bubble'''?!''
+#: {{ux|en|Are you having a '''bubble'''?!}}
+#: {{syn|en|giraffe|bubble bath}}
 # {{lb|en|computing}} Any of the small magnetized areas that make up [[bubble memory]].
 # {{lb|en|poker}} The point in a poker [[tournament]] when the last player without a prize loses all their [[chip]]s and leaves the game, leaving only players that are going to win prizes. (e.g., if the last remaining 9 players win prizes, then the point when the 10th player leaves the tournament)
-#: ''Many players tend to play timidly (not play many hands) around the '''bubble''', to keep their chips and last longer in the game.''
+#: {{ux|en|Many players tend to play timidly (not play many hands) around the '''bubble''', to keep their chips and last longer in the game.}}
 # A group of people who are in [[quarantine]] together.
 #* {{quote-journal|en|date=April 7, 2020|work=New Zealand Herald|title=Covid 19 coronavirus: Police called after Mt Eden landlord tries to move into flat during lockdown |author=|volume=|number=|passage="There was an empty room and this is my house," Mark Philip told the Herald."Where am I supposed to go? Whose '''bubble''' am I supposed to infect?"}}
-
-====Synonyms====
-* (a laugh) [[giraffe]], [[bubble bath]]
-
-====Antonyms====
-* {{sense|a spherically contained volume of gas enclosed by a thin film of liquid, or within a volume of liquid}} {{l|en|antibubble}} {{gloss|a spherically contained volume liquid enclosed by a thin film of gas, or within a volume of gas}}
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''bubble'' (noun)}}
