--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -36,7 +36,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # The globule of air in the spirit tube of a level.
 # Anything lacking firmness or solidity; a cheat or fraud; an empty project.
 #*{{RQ:Shakespeare As You Like It|act=II|scene=vii|passage=Then a soldier {{...}} / Seeking the '''bubble''' reputation / Even in the cannon's mouth}}
-# {{lb|en|Cockney rhyming slang}} A [[laugh]] (''also:'' [[bubble bath]]).
+# {{lb|en|Cockney rhyming slang}} A [[laugh]].
 #: {{syn|en|giraffe|bubble bath}}
 #: {{ux|en|Are you having a '''bubble'''?!}}
 # {{lb|en|computing}} Any of the small magnetized areas that make up [[bubble memory]].
