--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -37,7 +37,9 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #: {{syn|en|bubble and squeak}}
 # A small, hollow, floating bead or globe, formerly used for testing the strength of spirits.
 # The globule of air in the spirit tube of a level.
-# Anything lacking firmness or solidity; a cheat or fraud; an empty project.
+# {{lb|en|figurative}} Anything lacking firmness or solidity; a [[cheat]] or [[fraud]]; an empty project.
+#: {{ux|en|real estate '''bubble'''}}
+#: {{ux|en|dot-com '''bubble'''}}
 #*{{RQ:Shakespeare As You Like It|act=II|scene=vii|passage=Then a soldier {{...}} / Seeking the '''bubble''' reputation / Even in the cannon's mouth}}
 # {{lb|en|Cockney rhyming slang}} A [[laugh]].
 #: {{syn|en|giraffe|bubble bath}}
