t+mi:[[orokatirua]] ([[WT:EDIT|Assisted]]) <consonance#60553260>

--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -22,6 +22,7 @@ From {{etyl|fro|en}}, from {{etyl|la|en}} {{lena}} {{m|la|consonantia}}
 * French: {{t+|fr|consonance|f}}
 {{trans-mid}}
 * Hungarian: {{t|hu|konszonánc}}, {{t|hu|[[mássalhangzó]]s [[asszonánc]]}}
+* Maori: {{t|mi|orokatirua}}
 * Russian: {{t+|ru|созву́чие|n}}, {{t+|ru|консона́нс|m}}
 {{trans-bottom}}
 
