--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -442,7 +442,7 @@ Probably a {{vi-etym-sino|栓||hv=y|thuyên}}.
 ===Noun===
 {{vi-noun|cls=cái|[[杄]], [[釺]], [[𣏿]], [[𣛩]]}}
 
-# [[bar]] (used for [[locking]] a door)
+# [[bar]], [[peg]] (used for [[locking]] a door)
 # [[latch]]
 
 ====Derived terms====
