--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -67,7 +67,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 *: Western Apache: {{t|apw|gah}}
 * Arabic: {{t|ar|أرنب|m|alt=أَرْنَب}}
 *: Egyptian Arabic: {{t|arz|ارنب|m|tr=arnab}}
-*: Moroccan Arabic: {{t|ary|ڭنينة|tr=gnīna}}
+*: Moroccan Arabic: {{t|ary|قنية|tr=qniyya}}
 * Armenian: {{t+|hy|ճագար|sc=Armn}}
 * Aromanian: {{t|rup|ljepuri|m}}, {{t+|rup|ljepure|m}}, {{t|rup|ljepur|m}}
 * Assamese: {{t|as|শহা}}, {{t|as|শহাপহু}}
