t+de:[[Marder]] ([[WT:EDIT|Assisted]]) <weasel#60698968>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -160,7 +160,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 *: Mandarin: {{t-needed|cmn}}
 * Esperanto: {{qualifier|♂♀}} {{t+|eo|musteledo}}, {{qualifier|♂}} {{t|eo|virmusteledo}}, {{qualifier|♀}} {{t|eo|musteledino}}, {{t|eo|mustelo}}
 * Finnish: {{t+|fi|näätäeläin}}
-* German: {{t-needed|de}}
+* German: {{t+|de|Marder|m}}
 {{trans-mid}}
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín uasal|m}}, {{t|ga|beainín uasal|f}}
 * Japanese: {{t-needed|ja}}
