--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -218,6 +218,9 @@ From {{inh|fr|fro|dame}}, from {{inh|fr|LL.|domna}}, shortened variant of {{inh|
 {{table:chess pieces/fr}}
 {{table:playing cards/fr}}
 
+====Descendants====
+* {{desc|pl|dama|bor=1}}
+
 ===Further reading===
 * {{R:TLFi}}
 
