--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -323,7 +323,7 @@ From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 * {{desc|enm|dame|bor=1}}, {{l|enm|dam}}
 ** {{desc|en|dame}}
 * {{desc|frm|dame}}
-** {{desc|fr|dame}}
+** {{desctree|fr|dame}}
 * {{desc|nrf|dame}}
 * {{desc|nb|dame|bor=1}}
 * {{desc|nn|dame|bor=1}}
