--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -346,7 +346,7 @@ Perhaps a corruption of {{m|en|rabate}}.
 ====Verb====
 {{head|en|verb}}
 
-# [[confound]]; [[damn]]; [[drat]]
+# [[confound|Confound]]; [[damn]]; [[drat]].
 #* {{quote-book|en|year=1797|author=George Colman|title=The Heir at Law|passage=''LORD D.'' There, Dick, d'ye hear how the tutorer talks? oh '''rabbit''' it! he can ladle you out of latin by the quart;—and grunts greek like a pig.}}
 
 [[Category:en:Rabbits]]
