--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -29,7 +29,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 # A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can win or to help another break a [[record]]; a [[pacesetter]].
 # {{lb|en|cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
 # {{lb|en|comptheory}} A large [[element]] at the beginning of a [[list]] of items to be [[bubble sort]]ed, and thus tending to be quickly swapped into its correct position. Compare {{m|en|turtle}}.
-# [[Welsh rarebit|Welsh rabbit]]; [[rarebit]]; melted cheese served atop toast.
+# [[rarebit|Rarebit]]; [[Welsh rarebit|Welsh rabbit]] or a similar dish: melted cheese served atop toast.
 #* '''2018''', Helen Saberi, ''Teatimes: A World Tour'', Reaktion Books ({{ISBN|9781780239682}})
 #*: The cheese mixture may be served with toast on the side or poured on top of toast and grilled until golden brown and bubbling. Other variations include Buck '''rabbit''', a Welsh '''rabbit''' with a poached egg on top, and Yorkshire '''rabbit''' with bacon &nbsp;...
 #* '''1858''', Mrs. N. K. M. Lee, ''The American Family Cook Book'', page 47:
