--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -50,6 +50,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 
 ====Translations====
 {{trans-top|lowest limit}}
+* Bulgarian: {{t+|bg|минимум|m}}
 * Catalan: {{t+|ca|mínim|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|最小|tr=zuìxiǎo|sc=Hani}}, {{t+|cmn|最低|tr=zuìdī|sc=Hani}}, {{t+|cmn|極小|sc=Hani}}, {{t+|cmn|极小|tr=jíxiǎo|sc=Hani}}, {{t+|cmn|最小值|tr=zuìxiǎozhí|sc=Hani}} {{gloss|lowest value}}
@@ -90,6 +91,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 
 ====Translations====
 {{trans-top|lowest degree}}
+* Bulgarian: {{t+|bg|минимален}}
 * Chinese:
 *: Mandarin: {{t+|cmn|最小|tr=zuìxiǎo|sc=Hani}}, {{t+|cmn|最低|tr=zuìdī|sc=Hani}}, {{t+|cmn|極小|sc=Hani}}, {{t+|cmn|极小|tr=jíxiǎo|sc=Hani}}
 * Finnish: {{t|fi|[[minimi]]-}}, {{t+|fi|minimaalinen}}, {{t|fi|[[mahdollisimman]] [[pieni]]}}
