/* English */ Punctuation. <blow#60715654>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -82,7 +82,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #*: At the breaking edge with him and completely fed up with his everlasting bragging and '''blowing''' about his personal exploits, and desirous of putting him somewhere, anywhere, so they wouldn't be continuously annoyed by him, {{...}}
 #* '''1976''', David Toulmin, ''Blown Seed'' (page 148)
 #*: Audie never liked him because he was further in with old Craig than he was, bragging and '''blowing''' about his work and the things he could do, while Audie sat quiet as a mouse listening to his blab.
-# {{lb|en|slang|informal|AAVE}} To [[sing]]
+# {{lb|en|slang|informal|AAVE}} To [[sing]].
 #: ''That girl has a wonderful voice; just listen to her '''blow'''!''
 # {{lb|en|Scientology|intransitive}} To [[leave]] the [[Church of Scientology]] in an unauthorized manner.
 
