--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -13,10 +13,11 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{en-noun}}
 
 # {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
-#: ''Dylan owes Fletcher $30 from an unsuccessful '''bet'''.''
+#: {{ux|en|Dylan owes Fletcher $30 from an unsuccessful '''bet'''.}}
 # A degree of [[certainty]].
-#: ''It’s a safe '''bet''' that it will rain tomorrow.''
-#: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow.''
+#: {{ux|en|It’s a safe '''bet''' that it will rain tomorrow.}}
+#: {{ux|en|There's a decent '''bet''' that we'll be able to reach the top of that hill in an hour.}}
+#: {{ux|en|It’s an even '''bet''' that Jim will come top of the maths test tomorrow.''}}
 
 =====Translations=====
 {{trans-top|a wager}}
