/* Verb */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <bet#60718260>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -94,7 +94,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 #* {{rfdatek|en|O. W. Holmes}}
 #*: I'll '''bet''' you two to one I'll make him do it.
 # To be [[sure]] of something; to be able to [[count]] on something.
-#: ''You '''bet'''!''
+#: {{ux|en|Fancy going for a drink after work?<br>You '''bet''' I do!}}
 # {{lb|en|poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
 
 =====Derived terms=====
