/* Noun */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <adjustment#60718472>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -13,9 +13,9 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 # The action of [[adjust]]ing something
 # The result of adjusting something; a small [[change]]; a minor [[correction]]; a [[modification]] or [[alteration]]
 # The [[settle|settling]] or [[balance|balancing]] of a [[financial]] [[account]]
-#: ''The credit card company made an '''adjustment''' to my account to waive the late fee.''
+#: {{ux|en|The credit card company made an '''adjustment''' to my account to waive the late fee.}}
 # The behavioural process of balancing conflicting needs, or needs against obstacles in the environment.
-#: ''When Jim graduated, he found '''adjustment''' to the working world difficult.''
+#: {{ux|en|When Jim graduated, he found '''adjustment''' to the working world difficult.}}
 # The [[assessment]], by an insurance company, of a [[claim]]; the [[settlement]] of such a claim
 
 ====Synonyms====
