/* Verb */ fart? never heard that one. request example <badger#60723965>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -179,11 +179,11 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * {{comcatlite|Mustelidae}}
 
 ====Verb====
-{{en-verb|badgers|badgering|badgered}}
+{{en-verb}}
 
 # To [[pester]], to [[annoy]] persistently.
 #: {{ux|en|He kept '''badgering''' her about her bad habits.}}
-# {{lb|en|British|informal}} To [[pass gas]]; to [[fart]].
+# {{lb|en|British|slang}} To [[pass gas]]; to [[fart]]. {{rfex|en}}
 
 =====Synonyms=====
 * {{sense|to fart}} {{l|en|Thesaurus:flatulate}}
