t+hy:[[սաում]] t-balance ([[WT:EDIT|Assisted]]) <sawm#60751824>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -15,6 +15,7 @@ From {{der|en|ar|صَوْم||fasting; abstaining from food, drink, and sex}}, pr
 ====Translations====
 {{trans-top|Islamic fasting}}
 * Arabic: {{t|ar|صَوْم|m}}, {{t|ar|صِيَام|m}}
+* Armenian: {{t|hy|սաում}}
 * Azerbaijani: {{t+|az|oruc}}
 * Bengali: {{t|bn|রোজা}}
 * Chinese:
@@ -30,8 +31,8 @@ From {{der|en|ar|صَوْم||fasting; abstaining from food, drink, and sex}}, pr
 * Korean: {{t|ko|사움}}
 * Kurdish: {{t+|ku|rojî}}
 *: Sorani: {{t|ckb|ڕۆژوو}}
-* Kyrgyz: {{t+|ky|орозо|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|орозо|sc=Cyrl}}
 * Malay: {{t|ms|puasa}}
 * Malayalam: {{t+|ml|വ്രതം|sc=Mlym}}
 * Pashto: {{t+|ps|روژه|sc=ps-Arab}}
