--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -217,7 +217,7 @@ From {{der|hu|la|-um||2nd declension neuter nominative singular termination}}.
 ===Suffix===
 {{head|non|suffix|cat2=inflectional suffixes}}
 
-# {{n-g|Used to form the dative plural of essentially all nouns and adjective, as well as most pronouns}}
+# {{n-g|Used to form the dative plural of essentially all nouns and adjectives, as well as most pronouns}}
 #* ''armr'' → '''''ǫ'''rm'''um'''''
 # {{n-g|Used to denote the 1st person plural forms in the active indicative and imperative forms of most verbs}}
 
