--- a/en/z/zoolatria.856490.wikitext
+++ b/en/z/zoolatria.856490.wikitext
@@ -19,3 +19,22 @@
 
 ====Synonyms====
 * {{l|fi|eläintenpalvonta}}
+
+----
+
+==Polish==
+
+===Pronunciation===
+* {{pl-IPA}}
+
+===Noun===
+{{pl-noun|f}}
+
+# [[zoolatry]]
+
+====Declension====
+{{pl-decl-noun-f|tantum=s}}
+
+===Further reading===
+* {{R:pl:WSJP}}
+* {{R:PWN}}
