--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -110,6 +110,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 {{trans-mid}}
 * Italian: {{t|it|piedipiatti}}, {{t+|it|poliziotto|m}}, {{t+|it|secondino|m}}, {{t+|it|sbirro|m}} {{qualifier|offensive}}
 * Japanese: {{t|ja|おまわりさん|tr=o-mawari-san|sc=Jpan}} {{qualifier|colloquial|inoffensive}}, {{t+|ja|察|tr=satsu|sc=Jpan}}
+* Latin: {{t|la|vigil|m}}
 * Macedonian: {{t|mk|цајкан|m}}, {{t|mk|џандар|m}}
 * Norwegian: {{t+|no|purk|m}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}, {{t+|pl|pies|m}} {{qualifier|offensive}}, {{t+|pl|menda|f}} {{qualifier|offensive}}
