--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -15,7 +15,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 [[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
 {{he-proper noun|wv=יִשְׂרָאֵל|g=m|tr=yisra'él}}
 
-# [[Israel]], {{gloss|the alternative name of [[Jacob]]}}
+# [[Israel]] {{gloss|the alternative name of [[Jacob]]}}
 #* {{RQ:Tanach|1|32|29|t=JPS}}
 #*: {{ux|he|וַיֹּאמֶר לֹא יַעֲקֹב יֵאָמֵר עוֹד שִׁמְךָ כִּי אִם־'''יִשְׂרָאֵל''' כִּי־שָׂרִיתָ עִם־אֱלֹהִים וְעִם־אֲנָשִׁים וַתּוּכָל׃|tr=vayómer ló ya'akóv ye'amér 'ód shim'khá kí 'im-'''yisra'él''' ki-saríta 'im-'elohím v'im-'anashím vatukhál.<br/>wayyṓmer lō yaʿăqōḇ yēʾāmēr ʿōḏ šiməḵā kī-ʾim-'''yiśrāʾēl''' kī śārī́ṯā ʿim-ʾĕlōhīm wəʾim-ʾănāšīm wattūḵāl.|And he said: ‘Thy name shall be called no more Jacob, but '''Israel'''; for thou hast striven with God and with men, and hast prevailed.’}}
 # the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
