--- a/en/i/ineducable.742112.wikitext
+++ b/en/i/ineducable.742112.wikitext
@@ -7,6 +7,7 @@
 {{en-adj}}
 
 # Incapable of being [[educate]]d; not [[educable]].
+#* {{quote-journal|en|year=2020|author=Francine Prose|title=Has Trump learned anything from Covid-19? Absolutely not|journal=The [[w:Grauniad|Grauniad]]|url=https://www.theguardian.com/commentisfree/2020/oct/06/trump-coronavirus-health-empathy|page=|text=But, once again, Donald Trump seems to be '''ineducable'''.}}
 
 ===Anagrams===
 * {{anagrams|en|a=abcdeeilnu|induceable}}
