--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -7,7 +7,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 
 ===Pronunciation===
 * {{a|IL}} {{IPA|he|/jis.ʁaˈ(ʔ)el/}}
-* {{a|Ashkenazi Hebrew}} {{IPA|he|/jis.rɔˈejl/|[jɪsˈʁɔ.əl]}}
+* {{a|Ashkenazi Hebrew}} {{IPA|he|/jis.rɔ.ejl/|/jis.ru.ajl/}}
 * {{a|Tiberian}} {{IPA|he|/jis.rɔːˈʔeːl/}}
 * {{a|hbo}} {{IPA|he|/jiɬ.raːˈʔeːl/}} → {{IPAchar|/jis.raːˈʔeːl/}}
 
