--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -181,7 +181,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 ====Verb====
 {{en-verb}}
 
-# To [[pester]], to [[annoy]] persistently.
+# To [[pester]], to [[annoy]] persistently; [[press]].
 #: {{ux|en|He kept '''badgering''' her about her bad habits.}}
 # {{lb|en|British|slang}} To [[pass gas]]; to [[fart]]. {{rfex|en}}
 
