t+he:[[דאז]] t-balance ([[WT:EDIT|Assisted]]) <then#60765112>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -356,12 +356,13 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Esperanto: {{t|eo|tiama}}
 * Finnish: {{t+|fi|silloinen}}
 * German: {{t+|de|damalig}}
+* Hebrew: {{t|he|דְּאָז|tr=d'áz}}
 * Hungarian: {{t+|hu|akkori}}
 * Japanese: {{t+|ja|当時|tr=tōji}}, {{t|ja|そのとき|tr=sono toki}}, {{t|ja|その時点|tr=sono jiten}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t|nb|daværende}}
 *: Nynorsk: {{t|nn|dåværande}}
-{{trans-mid}}
 * Portuguese: {{t|pt|de então}}
 * Russian: {{t+|ru|тогда́шний}}
 * Spanish: {{t|es|de entonces}}
