/* Translations */ Added Egyptian translation. <behold#60768673>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -41,6 +41,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Chinese:
 *: Mandarin: {{t+|cmn|看|tr=kàn|sc=Hani}}
 * Dutch: {{t+|nl|aanschouwen}}
+* Egyptian: {{t-egy|ptr|h=p*t:r-M4-D6}}
 * Esperanto: {{t+|eo|rigardi}}
 * Finnish: {{qualifier|1}} {{t+|fi|katsoa}}
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}, {{t+|fr|observer}}
