--- a/en/r/rosier.746684.wikitext
+++ b/en/r/rosier.746684.wikitext
@@ -30,7 +30,7 @@ From {{der|en|fro|rosier}}.
 ==French==
 
 ===Etymology===
-{{suffix|fr|rose|ier}}
+From {{inh|fr|fro|rosier}}. Equivalent to {{suffix|fr|rose|ier}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
