t+es:[[asistir]] t+es:[[ir]] ([[WT:EDIT|Assisted]]) <attend#60777670>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -126,7 +126,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Korean: {{t+|ko|다니다}}
 * Portuguese: {{t+|pt|frequentar}}
 * Russian: {{t+|ru|посеща́ть|impf}}, {{t+|ru|посети́ть|pf}}, {{t+|ru|ходи́ть|impf}} {{qualifier|intransitive}}
-* Spanish: {{t+|es|cursar}}
+* Spanish: {{t+|es|cursar}}, {{t+|es|asistir}}, {{t+|es|ir}}
 {{trans-bottom}}
 
 ===Etymology 2===
