--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -12,6 +12,8 @@
 ====Translations====
 {{trans-top|official name for modern day Russia before the collapse of the Soviet Union}}
 * Bengali: {{t|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
+* Chinese:
+*: Mandarin: {{t|cmn|俄羅斯蘇維埃聯邦社會主義共和國|tr=Éluósī Sūwéi'āi Liánbāng Shèhuìzhǔyì Gònghéguó}}, {{t|cmn|俄罗斯苏维埃联邦社会主义共和国|tr=Éluósī Sūwéi'āi Liánbāng Shèhuìzhǔyì Gònghéguó}}
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Danish: {{t|da|Russiske Socialistiske Føderative Sovjetrepublik|c}}
 * Finnish: {{t|fi|Venäjän Sosialistinen Federatiivinen Neuvostotasavalta}}
