/* Translations */ BA <weasel#60778642>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -63,6 +63,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Arabic: {{t|ar|اِبْن عِرْس|m}}
 *: Moroccan Arabic: {{t|ary|فارة الخيل|f|tr=farat el-khil}} {{qualifier|lit. horse-mouse}}
 * Armenian: {{t+|hy|աքիս}}
+* Bashkir: {{t|ba|йәтсә}}
 * Basque: {{t+|eu|erbinude}}
 * Belarusian: {{t|be|ла́ска|f}}
 * Breton: {{t+|br|kaerell}}
