--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -58,6 +58,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 * Esperanto: {{t|eo|minimumo}}
 * Finnish: {{t+|fi|minimi}}, {{t|fi|alaraja}}
 * French: {{t+|fr|minimum|m}}
+* Georgian: {{t|ka|მინიმუმი}}, {{t|ka|არანაკლები}}, {{t|ka|სულ მცირე}}, {{t|ka|სულ ცოტა}}
 * German: {{t+|de|Minimum|n}}, {{t|de|Mindestmaß|n}}
 * Greek: {{t|el|ελάχιστο όριο|n}}, {{t|el|κατώτατο όριο|n}}
 * Hebrew: {{t|he|מִינִימוּם|m|tr=minimum}}, {{t+|he|מִזְעָר|m|tr=miz'ár}}, {{t+|he|מִצְעָר|m|tr=mitz'ár}}
