/* Translations */ BA <polecat#60837784>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -34,6 +34,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 ====Translations====
 {{trans-top|weasel of the genus ''Mustela''}}
 * Arabic: {{t|ar|نِمْس|m}}
+* Bashkir: {{t|ba|көҙән}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t+|fi|kärppä}}
@@ -48,6 +49,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 * Albanian: {{t|sq|bundër|f}}, {{t+|sq|qelbës|m}}
 * Arabic: {{t|ar|نِمْس|m}}
 * Armenian: {{t+|hy|ժանտաքիս}}
+* Bashkir: {{t|ba|көҙән}}
 * Basque: {{t|eu|ipurtats}}
 * Belarusian: {{t|be|тхор лясны́|m}}, {{t|be|тхор чо́рны|m}}, {{t|be|тхор|m}}
 * Breton: {{t|br|pudask|m}}
