--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -6,7 +6,9 @@
 * {{l|en|thot}} {{qualifier|Scottish, obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|thaugh}}, {{m|enm|thagh|}}, from {{inh|en|ang|þēah||though, although, even if, that, however, nevertheless, yet, still; whether}}, later superseded in many dialects by {{ncog|enm|though}}, {{m|enm|thogh}}, from {{der|en|non|*þóh}} (later {{m|non|þó}}); both from {{inh|en|gem-pro|*þauh||though}}, from {{der|en|ine-pro|*to-}}, suffixed with {{der|en|gem-pro|*-hw}} &lt; {{der|en|ine-pro|*-kʷe||and}}. Akin to {{cog|sco|thoch||though}}, {{cog|stq|dach||though}}, {{cog|fy|dôch}}, {{m|fy|dochs||though}}, {{cog|nl|doch||though}}, {{cog|de|doch||though}}, {{cog|sv|dock||however, still}}, {{cog|is|þó||though}}. More at [[that]].
+From {{inh|en|enm|thaugh}}, {{m|enm|thagh|}}, from {{inh|en|ang|þēah||though, although, even if, that, however, nevertheless, yet, still; whether}}, later superseded in many dialects by {{ncog|enm|though}}, {{m|enm|thogh}}, from {{der|en|non|*þóh}} (later {{m|non|þó}}); both from {{inh|en|gem-pro|*þauh||though}}, from {{der|en|ine-pro|*to-}}, suffixed with {{der|en|gem-pro|*-hw}} &lt; {{der|en|ine-pro|*-kʷe||and}}. 
+
+Akin to {{cog|sco|thoch||though}}, {{cog|stq|dach||though}}, {{cog|fy|dôch}}, {{m|fy|dochs||though}}, {{cog|nl|doch||though}}, {{cog|de|doch||though}}, {{cog|sv|dock||however, still}}, {{cog|is|þó||though}}. More at [[that]].
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|''th''ō}}, {{IPA|en|/ðəʊ/}}
