--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Alternative forms===
-* {{l|en|den}}
+* {{l|en|den||AAVE|Bermuda}}
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|en|/ðɛn/}}
