--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{der|en|frm|théorie}}, from {{der|en|LL.|theōria}}, from {{der|en|grc|θεωρία||contemplation, speculation, a looking at, things looked at}}, from {{m|grc|θεωρέω||I look at, view, consider, examine}}, from {{m|grc|θεωρός||spectator}}, from {{m|grc|θέαν||a view}} + {{m|grc|ὁράω||I see, look}} [i. e. θέαν ὁράω (théan horáō, “see, look at a view; survey + genitive”)].
+From {{der|en|frm|théorie}}, from {{der|en|LL.|theōria}}, from {{der|en|grc|θεωρία||contemplation, speculation, a looking at, things looked at}}, from {{m|grc|θεωρέω||I look at, view, consider, examine}}, from {{m|grc|θεωρός||spectator}}, from {{m|grc|θέαν||a view}} + {{m|grc|ὁράω||I see, look}} [i. e. θέαν ὁράω (théan horáō, “see, look at a view; survey + genitive”)]. ''Theory can be derived from two Albanian words: '''di''' (to say, to suppose) and '''ri''' (new).''
 
 ===Pronunciation===
 * {{a|Received Pronunciation|General Australian}} {{IPA|en|/ˈθɪəɹi/|/ˈθiːəɹi/|/ˈθɪɹi/}}
