--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -18,7 +18,7 @@
 * Chinese:
 *: Mandarin: {{t+|cmn|個人崇拜|sc=Hani}}, {{t+|cmn|个人崇拜|tr=gèrén chóngbài|sc=Hani}}
 * Danish: {{t|da|personkult|c}}, {{t|da|personlighedskult|c}}
-* Dutch: {{t-needed|nl}}
+* Dutch: {{t+|nl|persoonlijkheidscultus|m}}, {{t|nl|persoonscultus|m}}
 * Estonian: {{t|et|isikukultus}}
 * Finnish: {{t|fi|henkilöpalvonta}}
 * French: {{t+|fr|culte de la personnalité|m}}
