--- a/en/a/a life of its own.803367.wikitext
+++ b/en/a/a life of its own.803367.wikitext
@@ -14,4 +14,7 @@
 #* {{quote-text|en|year=2003|author=Kristin Hunter Lattany|title=The Lakestown Rebellion|page=185
 |passage=A massive hangover with '''a life of its own''' kept Fess pinned to his bed most of Sunday.}}
 
+===Further reading===
+* {{R:MWO|take on a life of its own}}
+
 [[Category:English idiomatic construction prototypes]]
