<a life of its own#60874300>

--- a/en/a/a life of its own.803367.wikitext
+++ b/en/a/a life of its own.803367.wikitext
@@ -14,6 +14,9 @@
 #* {{quote-text|en|year=2003|author=Kristin Hunter Lattany|title=The Lakestown Rebellion|page=185
 |passage=A massive hangover with '''a life of its own''' kept Fess pinned to his bed most of Sunday.}}
 
+====Usage notes====
+* Not to be confused with {{m|en|take one's own life}}.
+
 ===Further reading===
 * {{R:MWO|take on a life of its own}}
 
