--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -93,7 +93,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Galician: {{t|gl|división|f}}
 * German: {{t+|de|Teilung|f}}
 * Greek: {{t+|el|διαίρεση|f}}
-*: Ancient: {{t|grc|διαίρεσις|f}}
+*: Ancient: {{t|grc|διαίρεσις|f}}, {{t|grc|στάσις}}
 * Hebrew: {{t|he|חלוקה|f|tr=ḥaluqá|sc=Hebr}}
 * Icelandic: {{t|is|skipting|f}}, {{t|is|niðurskipting|f}}, {{t+|is|deiling|f}}
 * Indonesian: {{t+|id|divisi}}
