--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -175,6 +175,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Catalan: {{t+|ca|a}}
 * Chinese:
 *: Mandarin: {{qualifier|no preposition is used, e.g.:}} {{lang|und|[[五]][[點鐘]]}}, {{lang|und|[[五]][[点钟]]}} (wǔ diǎnzhōng) or {{lang|und|[[五]][[點]]}}, {{lang|und|[[五]][[点]]}} (wǔ diǎn) "at five o'clock"
+* Cornish: {{t|kw|dhe}}
 * Czech: {{t+|cs|v}}
 * Danish: {{t+|da|på}}
 * Dutch: {{t+|nl|om}}
