--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -87,6 +87,9 @@ Various alternative etymologies have also been proposed:
 =====Synonyms=====
 {{zh-dial|月亮}}
 
+====Compounds====
+* {{see derivation subpage|Chinese}}
+
 ====Descendants====
 {{CJKV||げつ|j2=がつ|j3=がち|or=''gwachi''|월|nguyệt|v2=ngoạt|o=月|ぐゎち}}
 ''Others'':
