--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -621,37 +621,7 @@ Possibly from {{inh|ojp|jpx-pro|sort=つき|*tuku}}.
 # {{han tu form of|nhục|{{alt form|vi|肉||[[meat]] [[radical]]}}}}
 
 ====Compounds====
-{{der-top5|Compounds derived from {{vi-l|月|nguyệt}}}}
-* {{vi-l|月表|nguyệt biểu}}
-* {{vi-l|月俸|nguyệt bổng}}
-* {{vi-l|月琴|nguyệt cầm}}
-* {{vi-l|月瞻|nguyệt chiêm}}
-* {{vi-l|月殿|nguyệt điện}}
-* {{vi-l|月花|nguyệt hoa}}
-* {{vi-l|月老|nguyệt lão}}
-* {{vi-l|月亮|nguyệt lượng}}
-* {{vi-l|月光|nguyệt quang}}
-* {{vi-l|月刊|nguyệt san}}
-* {{vi-l|[[月蝕]]/[[月食]]|nguyệt thực}}
-* {{vi-l|月望|nguyệt vọng}}
-* {{vi-l|月尾|nguyệt vĩ}}
-* {{vi-l|半月|bán nguyệt}}
-* {{vi-l|經月|kinh nguyệt}}
-* {{vi-l|明月|minh nguyệt}}
-* {{vi-l|日月|nhật nguyệt}}
-* {{vi-l|風月|phong nguyệt}}
-* {{vi-l|賞月|thưởng nguyệt}}
-* {{vi-l|歲月|tuế nguyệt}}
-* {{vi-l|三個月|tam cá nguyệt}}
-{{der-bottom}}
-{{der-top5|Compounds derived from {{vi-l|月|ngoạt}}}}
-* {{vi-l|月經|ngoạt kinh}}
-* {{vi-l|正月|chánh ngoạt}}
-* {{vi-l|菊月|cúc ngoạt}}
-* {{vi-l|大月|đại ngoạt}}
-* {{vi-l|夾月|giáp ngoạt}}
-* {{vi-l|年月|niên ngoạt}}
-{{der-bottom}}
+* {{see derivation subpage|Vietnamese}}
 
 ===References===
 <references/>
