--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -1,19 +1,22 @@
 ==English==
-{{wikipedia|Gettysburg Address}}
 
 ===Etymology===
-In {{w|Abraham Lincoln}}'s {{w|Gettysburg Address}}, he used this (at the time) widely known measure of {{m|en|score}}, meaning "20 years". In modern language, it would be simply "87 years ago". However, the widespread familiarity of Lincoln's address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.
+From {{m|en|four}} + {{m|en|score|t=period of 20 years}} + {{m|en|and}} + {{m|en|twenty}} + {{m|en|years}} + {{m|en|ago}}, literally “87 years ago”, the beginning of the {{w|Gettysburg Address}} made on November 19, 1863, by [[w:President of the United States|United States President]] {{w|Abraham Lincoln}} (1809–1865). The widespread familiarity of Lincoln’s address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈfɔː skɔː‿ɹən ˌsɛvən jɛːz əˌɡəʊ/}}
 * {{a|GA}} {{IPA|en|/ˈfɔɹ skɔɹ ən ˌsɛvən jɛɹz əˌɡoʊ/}}
-* {{audio|en|en-au-four score and seven years ago.ogg|Audio (AU)}}
+* {{audio|en|En-au-four score and seven years ago.ogg|Audio (AU)}}
+* {{hyphenation|en|four score and se|ven years ago}}
 
 ===Adverb===
-{{head|en|adverb}}
+{{en-adv|-}}
 
-# {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
+# {{lb|en|idiomatic|often|humorous}} {{non-gloss definition|Used (sometimes [[sarcastically]]) to [[indicate]] that a [[past#Adjective|past]] [[event]] being [[mention#Verb|mentioned]] is particularly [[important]]}}: a [[long]] [[time#Noun|time]] ago; [[many]] [[year]]s ago.
 #* {{RQ:Lincoln Gettysburg|Nicolay|1|brackets=on|passage='''Four score and seven years ago''' our fathers brought forth, upon this continent, a new nation, conceived in liberty, and dedicated to the proposition that "all men are created equal"{{sic}}}}
 #* {{quote-book|en|author={{w|Franklin Delano Roosevelt}}|date=16 April 1936|title=Address at the Dedication of the New Department of the Interior Building|url=https://www.google.co.nz/books/edition/Public_Papers_of_the_Presidents_of_the_U/WCfeAwAAQBAJ|passage=It was established '''four score and seven years ago''', and since that time its activities have been intertwined with the internal development of the Nation itself.}}
-#* {{quote-book|en|author=Phillip Roth|date=23 December 2010|chapter=Prologue|title=The Great American Novel|page=21|isbn=9781446401040|url=https://www.google.co.nz/books/edition/The_Great_American_Novel/XsYa5qrC-T0C|passage=I imagined momentarily that it was '''four score and seven years ago''', that I had just been brought forth from my mother{{...}}}}
+#* {{quote-book|en|author=Phillip Roth|date=23 December 2010|chapter=Prologue|title=The Great American Novel|page=21|isbn=9781446401040|url=https://www.google.co.nz/books/edition/The_Great_American_Novel/XsYa5qrC-T0C|passage=I imagined momentarily that it was '''four score and seven years ago''', that I had just been brought forth from my mother [...]}}
 #* {{quote-book|en|author=Vicky DeCoster|date=20 February 2012|chapter=The Letter|title=The Wacky World of Womanhood|page=93|isbn=9781468900453|url=https://www.google.co.nz/books/edition/The_Wacky_World_of_Womanhood/jUXXMexWbLIC|passage='''Four score and seven years ago''', I began writing an annual letter to be enclosed in my Christmas cards.}}
+
+===Further reading===
+* {{pedia|Gettysburg Address}}
