--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -18,16 +18,18 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 
 # {{lb|en|intransitive}} To suffer decomposition due to biological action, especially by [[fungus|fungi]] or bacteria.
 #* {{RQ:Pope Man|chapter=III|passage=Fix'd like a plant on his peculiar spot, / To draw nutrition, propagate, and '''rot'''.}}
+#: {{ux|en|The apple left in the cupboard all that time had started to '''rot'''.}}
 # {{lb|en|intransitive}} To decline in function or utility.
+#: {{ux|en|Your brain will '''rot''' if you spend so much time on the computer, Tony!}}
 # {{lb|en|ambitransitive}} To (cause to) [[deteriorate]] in any way, as in morals; to [[corrupt]].
 # {{lb|en|transitive}} To make [[putrid]]; to cause to be wholly or partially decomposed by natural processes.
-#: ''to '''rot''' vegetable fiber''
+#: {{ux|en|to '''rot''' vegetable fiber}}
 # {{lb|en|intransitive|figurative}} To spend a [[long]] period of [[time]] (in an unpleasant place).
-#: ''to '''rot''' in prison''
-#: ''to '''rot''' in Hell''
-#* {{rfdate|en|Macaulay}}
+#: #: {{ux|en|to '''rot''' in prison}}
+#: #: {{ux|en|to '''rot''' in Hell}}
+#* {{rfdatek|en|Macaulay}}
 #*: Four of the sufferers were left to '''rot''' in irons.
-#* {{rfdate|en|Thackeray}}
+#* {{rfdatek|en|Thackeray}}
 #*: '''Rot''', poor bachelor, in your club.
 # {{lb|en|transitive}} To expose, as flax, to a process of [[maceration]], etc., for the purpose of separating the [[fiber]]; to [[ret]].
 # {{lb|en|dated|slang}} To talk nonsense.
