--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -1,7 +1,7 @@
 {{also|Rabbit}}
 ==English==
 {{wikipedia}}
-{{wikipedia|Leporidae}}[[File:Kemah and Popper.jpg|thumb|This is a cute photo of my pet rabbits, Kemah and Popper]]
+{{wikipedia|Leporidae}}
 [[Image:Sylvilagus floridanus 14136.JPG|thumb|A rabbit (sense 1).]]
 
 ===Pronunciation===
