--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -63,6 +63,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Albanian: {{t+|sq|atëherë}}
 * Arabic: {{t|ar|آنَذَاكَ}}, {{t|ar|حِينَئِذٍ}}
 * Aromanian: {{t|rup|atumtsea}}, {{t|rup|atuntsi}}
+* Assamese: {{t|as|তেতিয়া}}
 * Belarusian: {{t|be|тады́}}
 * Bengali: {{t+|bn|তখন}}
 * Bulgarian: {{t+|bg|тога́ва}}
@@ -72,6 +73,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Czech: {{t+|cs|tehdy}}
 * Dalmatian: {{t|dlm|diatremun}}
 * Dutch: {{t+|nl|toen}}
+* Early Assamese: {{t|inc-oas|তেবে}}, {{t|inc-oas|তেতিক্ষণে}}
 * Esperanto: {{t+|eo|tiam}}
 * Finnish: {{t+|fi|silloin}}
 * French: {{t+|fr|alors}}, [[à]] [[cette]] [[époque]]-{{t+|fr|là}}
@@ -103,6 +105,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Lithuanian: {{t|lt|tada}}
 * Macedonian: {{t|mk|тогаш}}
 * Malay: {{t|ms|pada masa yang sama}}
+* Middle Assamese: {{t|inc-mas|তেবে}}
 * Navajo: {{t|nv|índa}}, {{t|nv|íídą́ą́ʼ}}
 * Neapolitan: {{t|nap|tanno}}
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
