--- a/en/d/daunted.720064.wikitext
+++ b/en/d/daunted.720064.wikitext
@@ -6,7 +6,7 @@
 # {{en-past of|daunt}}
 
 ===Adjective===
-{{en-adj|more|-}}
+{{en-adj|more}}
 
 # (Normally with a [[copular verb]]). Mildly [[afraid]] or [[worried]] by some upcoming situation.
 #: ''I was '''daunted''' by the prospect of interviewing such a heavyweight politician.''
