Added Cornish form <vodka#60943999>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -165,6 +165,26 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 
 ----
 
+==Cornish==
+
+===Pronunciation===
+* {{a|Revived Middle Cornish}} {{IPA|kw|[ˈvɔdka]}}
+* {{a|Revived Late Cornish}} {{IPA|kw|[ˈvɔdkɐ]}}
+
+===Noun===
+{{kw-noun|f|vodkas}}
+
+# [[vodka]]
+
+===References===
+* [https://www.cornishdictionary.org.uk/#vodka Cornish-English Dictionary] from Maga's Online Dictionary
+* '''2018''', ''Akademi Kernewek Gerlyver Kernewek (FSS) Cornish Dictionary (SWF)'' (2018 edition, p.190)
+* [https://alternativekernewek.wordpress.com/dictionary/vodka/ vodka] in the Alternative Cornish Dictionary
+
+[[Category:kw:Alcoholic beverages]]
+
+----
+
 ==Danish==
 
 ===Etymology===
