--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -66,6 +66,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 *: Cantonese: {{t|yue|伏特加酒|tr=fuk6 dak6 gaa1 zau2}}, {{t|yue|伏特加|tr=fuk6 dak6 gaa1}}
 *: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiājiǔ}}, {{t+|cmn|伏特加|tr=fútèjiā}}, {{t+|cmn|白酒|tr=báijiŭ}}
 * Chuvash: {{t|cv|водка}}
+* Cornish: {{t|kw|vodka|m}}
 * Czech: {{t+|cs|vodka|f}}
 * Danish: {{t|da|vodka|c}}
 * Dutch: {{t+|nl|wodka|m}}
