--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -64,7 +64,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Persian: {{t+|fa|نگریستن|tr=negaristan|sc=fa-Arab}}
 * Portuguese: {{t+|pt|ver}}, {{t+|pt|contemplar}}
 * Romanian: {{t+|ro|vedea}}
-* Russian: {{t+|ru|смотре́ть}}, {{t+|ru|гляде́ть}}
+* Russian: {{t+|ru|смотре́ть}}, {{t+|ru|гляде́ть}}, {{t+|ru|увидеть|pf}}, {{t+|ru|взглянуть|pf}}
 * Sanskrit: {{t+|sa|पश्यति}}
 * Scottish Gaelic: {{t|gd|amhairc}}
 * Serbo-Croatian: {{t+|sh|posmatrati}}, {{t+|sh|gledati}}
