--- a/en/m/monition.720241.wikitext
+++ b/en/m/monition.720241.wikitext
@@ -6,6 +6,7 @@ From {{etyl|xno|en}} {{m|fro|monicion}}, {{etyl|frm|en}} {{m|frm|monicion}}, and
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/məˈnɪʃn̩/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-monition.wav ‎|Audio (UK)}}
 
 ===Noun===
 {{en-noun}}
