t+es:[[alucinante]] ([[WT:EDIT|Assisted]]) <mind-bending#60949227>

--- a/en/m/mind-bending.720299.wikitext
+++ b/en/m/mind-bending.720299.wikitext
@@ -16,5 +16,6 @@
 * Bulgarian: {{t|bg|оказващ влияние}}
 * German: {{t|de|bewusstseinsverändernd}}
 {{trans-mid}}
+* Spanish: {{t+|es|alucinante}}
 * Turkish: {{l|tr|aklı}} {{t|tr|karıştıran}}, {{t+|tr|bunaltıcı}}, {{l|tr|hayal}} {{t|tr|gördüren}}, {{t+|tr|şaşırtıcı}}
 {{trans-bottom}}
