--- a/en/m/Maccabees.801819.wikitext
+++ b/en/m/Maccabees.801819.wikitext
@@ -6,7 +6,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|biblical}} One of two apocryphal books of the [[Old Testament]].
+# {{lb|en|biblical}} One of two books of the [[Catholic]] and [[Eastern Orthodox]] canon of the [[Old Testament]], considered [[apocryphal]] by [[Protestants]].
 #: {{syn|en|Macc.|q1=abbreviation}}
 # {{lb|en|history}} A Jewish [[liberation]] movement who fought for, and established, independence in the [[Land of Israel]] during the second and first centuries BC.
 
