/* Derived terms */ purple squirrel <squirrel#60969200>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -29,6 +29,7 @@ Displaced native {{noncog|enm|acquerne}}, {{m|enm|aquerne}}, from {{noncog|ang|Ä
 
 ====Derived terms====
 * {{l|en|gray squirrel}}
+* {{l|en|purple squirrel}}
 * {{l|en|red squirrel}}
 * {{l|en|squirrel friend}}
 
