--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -26,7 +26,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * {{l|en|wild otter}}
 
 ====Translations====
-{{trans-top|Mustela erminea}}
+{{trans-top|''Mustela erminea''}}
 * Albanian: {{t|sq|ermelina|?}}
 * Arabic: {{t|ar|قَاقِم|m}}
 * Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}, {{t+|hy|ախազ}}
