/* English */ +2 dates <rot#60975674>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -25,11 +25,11 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 # {{lb|en|transitive}} To make [[putrid]]; to cause to be wholly or partially decomposed by natural processes.
 #: {{ux|en|to '''rot''' vegetable fiber}}
 # {{lb|en|intransitive|figurative}} To spend a [[long]] period of [[time]] (in an unpleasant place).
-#: #: {{ux|en|to '''rot''' in prison}}
-#: #: {{ux|en|to '''rot''' in Hell}}
-#* {{rfdatek|en|Macaulay}}
+#: {{ux|en|to '''rot''' in prison}}
+#: {{ux|en|to '''rot''' in Hell}}
+#* {{RQ:Macaulay History}}
 #*: Four of the sufferers were left to '''rot''' in irons.
-#* {{rfdatek|en|Thackeray}}
+#* '''1848''', {{w|William Makepeace Thackeray}}, ''{{w|The Book of Snobs}}''
 #*: '''Rot''', poor bachelor, in your club.
 # {{lb|en|transitive}} To expose, as flax, to a process of [[maceration]], etc., for the purpose of separating the [[fiber]]; to [[ret]].
 # {{lb|en|dated|slang}} To talk nonsense.
