--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -7,7 +7,7 @@ From {{prefix|en|anarcho|capitalism}}. Coined by {{w|Murray Rothbard}} in the mi
 {{wikipedia}}
 {{wikiquote}}
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
-# {{lb|en|politics|economics}} A {{l|en|political}} and {{l|en|economic}} {{l|en|philosophy}} that advocates the {{l|en|elimination}} of the {{l|en|state}} and other {{l|en|coercive}} {{l|en|institutions}} in favour of {{l|en|individual}} {{l|en|self}}-{{l|en|ownership}} and {{l|en|free market}}.
+# {{lb|en|politics|economics}} A {{l|en|political}} and {{l|en|economic}} {{l|en|philosophy}} that advocates a form of modern {{l|en|feudalism}}
 
 ====Derived terms====
 * {{l|en|anarcho-capitalist}}
