--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -28,6 +28,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Estonian: {{t|et|õnnemäng}}
 * Finnish: {{t+|fi|uhkapeli}}
 * French: {{t+|fr|pari|m}}, {{t+|fr|jeu de hasard|m}}
+* Galician: {{t+|gl|aposta|f}}, {{t+|gl|aventuranza|f}}, 
 * Georgian: {{t|ka|აზარტული თამაში}}, {{t|ka|ავანტიურა}}
 * German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
@@ -50,6 +51,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Bulgarian: {{t+|bg|авантюра|f|sc=Cyrl}}
 * Dutch: {{t+|nl|gok|m}}, {{t+|nl|waagstuk|n}}
 * Finnish: {{t+|fi|uhkapeli}}
+* Galician: {{t+|gl|aventuranza|f}}
 * Georgian: {{t|ka|ავანტიურა}}, {{t|ka|რისკიანი საქმე}}
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
