--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -28,7 +28,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Estonian: {{t|et|õnnemäng}}
 * Finnish: {{t+|fi|uhkapeli}}
 * French: {{t+|fr|pari|m}}, {{t+|fr|jeu de hasard|m}}
-* Galician: {{t+|gl|aposta|f}}, {{t+|gl|aventuranza|f}}, 
+* Galician: {{t+|gl|aposta|f}}, {{t+|gl|aventuranza|f}}, {{t+|gl|envite|m}}
 * Georgian: {{t|ka|აზარტული თამაში}}, {{t|ka|ავანტიურა}}
 * German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
