--- a/en/w/wherealong.741975.wikitext
+++ b/en/w/wherealong.741975.wikitext
@@ -12,7 +12,7 @@
 {{en-con}}
 
 # {{lb|en|rare}} Along which.
-#* '''1842''', Abraham Tucker & Henry Paulet St. John Mildmay, ''The Light of Nature Pursued'', page 80:
+#* '''1768-1777''', {{w|Abraham Tucker}}, ''The Light of Nature Pursued''
 #*: Magnitude, figure, and motion, are reputed both by learned and vulgar to reside in the bodies wherein we observe them : yet it cannot be denied, that the suffer alterations in their conveyance to the mind, whether that be made through the sight, or the touch; they being all motion in the rays of light, the organs or other channels '''wherealong''' they pass, and that a different kind of motion from any in the bodies themselves.
 #* {{quote-book|en|year=1912|author=William H. Kersey|title=The Darksome Maids of Bagleere: A Somerset Tale|page=237|passage=At the closing afternoon, when there was a certain cessation of household cares and a frequent solitariness at teatime in the kitchen, those sea-bordering and empurpled heights would fix her attention, and she would project an inner vision beyond them to desolate sands '''wherealong''' her spirit had lamented, and their soleful hush had been borne back to her ears amid the melancholy wave-sounds which traversed watery distances.}}
 #* {{quote-book|en|year=1916|author=William A. Churchill|title=Sissano: Movements of Migration Within and Through Melanesia|page=169|passage=On this assumption of the independent migration stream eastward through Torres Strait we find our difficulties reduced to a minimum; we find confirmation in the line of affiliation '''wherealong''' quality is maintained — a line clearly marked from the Gulf Coast province to Suau, to Sariba, to Tubetube, to Panaieti with almost unimpared weight.}}
