--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -6,6 +6,7 @@ From (the stem of) {{etyl|la|en}} {{m|la|vortex}} {{suffix|en||al}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈvɔːtɪk(ə)l/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-vortical.wav|Audio (RP)}}
 
 ===Adjective===
 {{en-adj}}
