--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -115,8 +115,8 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * Russian: {{t+|ru|ко́жа|f}}
 * Scottish Gaelic: {{t|gd|leathar|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|кожа|f}}
-*: Roman: {{t+|sh|koža|f}}
+*: Cyrillic: {{t|sh|ко̏жа|f}}
+*: Roman: {{t+|sh|kȍža|f}}
 * Sinhalese: {{t|si|සම්}}
 * Slovak: {{t+|sk|koža|f}}
 * Slovene: {{t+|sl|usnje|n}}
