--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -19,6 +19,7 @@ From {{suffix|en|antinomian|ism}}, coined by {{w|Martin Luther}}, notably used i
 
 ====Translations====
 {{trans-top|a religious movement which believes that only faith is essential for salvation}}
+* German: {{t+|de|Antinomismus|m}}
 * Polish: {{t|pl|antynomizm}}
 {{trans-mid}}
 * Portuguese: {{t|pt|antinomianismo|m}}, {{t|pt|antinomismo|m}}
