--- a/en/r/resource energy.776622.wikitext
+++ b/en/r/resource energy.776622.wikitext
@@ -5,5 +5,16 @@
 
 # Energy taken from a [[source]] that is [[deplete]]d by [[extraction]] (e.g. fossil fuels).
 
+====Translations====
+{{trans-top|energy taken from a source that is depleted by extraction}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Dutch: {{t-needed|nl}}
+* Finnish: {{t-needed|fi}}
+{{trans-bottom}}
+
 ===See also===
 * {{l|en|renewable energy}}
+
+{{c|en|Energy}}
