--- a/en/r/resource energy.776622.wikitext
+++ b/en/r/resource energy.776622.wikitext
@@ -11,7 +11,7 @@
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
 * Dutch: {{t-needed|nl}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|[[luonnonvara]]sta [[saatava]] [[energia]]}}
 {{trans-bottom}}
 
 ===See also===
