--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -450,7 +450,7 @@ The insertion of ''s''—a 16th century spelling modification—is due to a chan
 {{trans-top|set, dot (as if) with islands}}
 * Finnish: {{t|fi|[[koristella]] [[saari]]lla|lit=decorate with islands}}
 * German: {{t-needed|de}}
-* Greek: {{t-needed|el}}
+* Greek:
 *: Ancient: {{t-needed|grc}}
 * Italian: {{t-needed|it}}
 {{trans-mid}}
