--- a/en/s/syllabogram.746564.wikitext
+++ b/en/s/syllabogram.746564.wikitext
@@ -6,6 +6,9 @@
 # A [[symbol]] that represents a [[syllable]].
 #: ''There are over 83 '''syllabograms''' in the {{w|Maya script}}.''
 
+====Holonyms====
+* {{l|en|syllabary}}
+
 ====Translations====
 {{trans-top|symbol}}
 * Finnish: {{t|fi|tavumerkki}}, {{t|fi|syllabogrammi}}
