t+gl:[[caxato]] ([[WT:EDIT|Assisted]]) <crook#61042757>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -77,6 +77,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 * Bulgarian: {{t+|bg|гега|f}}
 * Finnish: {{t|fi|käyräsauva}}
 * French: {{t+|fr|houlette|f}}
+* Galician: {{t+|gl|caxato|m}}
 * Georgian: {{t|ka|კავი}}, {{t|ka|კაუჭი}}
 * German: {{t+|de|Krücke}}, {{t+|de|Krückstock}} {{qualifier|crutch, cane}}, {{t|de|Hirtenstab|m}}, {{t|de|Krummstab|m}}
 * Greek: {{t+|el|γκλίτσα|f}}
