t+bg:[[увеличение]] ([[WT:EDIT|Assisted]]) <multiplication#61045077>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -139,6 +139,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 
 {{trans-top|increasing in number}}
 * Armenian: {{t+|hy|բազմացում}}
+* Bulgarian: {{t+|bg|увеличение|n}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t+|fi|lisääntyminen}}
