--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -226,6 +226,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Luxembourgish: {{t|lb|Gewiicht|n}}
 * Malay: {{t|ms|pemberat}}
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
+* Norwegian: {{t+|no|vekt}}
 * Old English: {{t|ang|ġewiht|n}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
