--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -98,6 +98,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Kurdish:
 *: Central Kurdish: {{t|ckb|ئەوەتا}}, {{t|ckb|ئەمەتا}}
 * Latin: {{t|la|ecce}}
+* Old English: {{t|ang|æfne}}
 * Portuguese: {{t+|pt|eis}}
 * Russian: {{t+|ru|вот}}
 * Spanish: {{t+|es|he aquí}}
