--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -15,7 +15,7 @@ From {{m|el|Ιταλία||Italy}}, from {{etyl|la|el}} ''[[Italia]]'', + adjecti
 {{el-decl-adj|dec=ός-ή-ό|stem=ιταλικ|nopio=1}}
 
 ====Related terms====
-{{el-see|Ιταλία|gloss=Italy|g=f}}
+{{el-see|Ιταλία|t=Italy|g=f}}
 
 ====See also====
-* {{l|el|[[πλάγιος|πλάγιοι]] [[χαρακτήρες]]|g=m-p|gloss=italics, italic characters}}
+* {{l|el|[[πλάγιος|πλάγιοι]] [[χαρακτήρες]]|g=m-p|t=italics, italic characters}}
