--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -75,6 +75,8 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Arabic: {{t|ar|أرنب|m|alt=أَرْنَب}}
 *: Egyptian Arabic: {{t|arz|ارنب|m|tr=arnab}}
 *: Moroccan Arabic: {{t|ary|قنية|tr=qniyya}}
+* Aramaic:
+*: Classical Syriac: {{t|syc|ܐܪܢܒܐ|f|tr=ʾarnəḇā}}, {{t|syc|ܠܐܓܘܣ|m|tr=lāḡōs}}
 * Armenian: {{t+|hy|ճագար|sc=Armn}}
 * Aromanian: {{t|rup|ljepuri|m}}, {{t+|rup|ljepure|m}}, {{t|rup|ljepur|m}}
 * Assamese: {{t|as|শহা}}, {{t|as|শহাপহু}}
@@ -160,9 +162,9 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Ladin: {{t|lld|conicio}}
 * Ladino: {{t|lad|konejo|m}}
 * Lao: {{t+|lo|ກະຕ່າຍ}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|truss}}
 * Latin: {{t+|la|cunīculus|m}}
+{{trans-mid}}
 * Latvian: {{t|lv|trusis|m}}
 * Lithuanian: {{t+|lt|triušis|m}}
 * Low German:
