/* Derived terms */ <myocyte#61080792>

--- a/en/m/myocyte.742099.wikitext
+++ b/en/m/myocyte.742099.wikitext
@@ -13,6 +13,7 @@
 * {{l|en|muscle cell}}
 
 ====Derived terms====
+* {{l|en|extramyocytic}}
 * {{l|en|myocytic}}
 * {{l|en|myocytoma}}
 * [[neomyocyte]]
