/* English */typo <fraction#61088382>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -1,9 +1,5 @@
 ==English==
-{{wikipedia}}
-
-===Etymology===
-{{root|en|ine-pro|*bʰreg-}}
-From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|fraction}}, from {{der|en|ML.|fractio||a fragment, portion}}, from earlier {{der|en|la|fractio||a breaking, a breaking into pieces}}, from {{m|la|fractus}} (English {{m|en|fracture}}), past participle of {{m|la|frangere||to break}} (whence English {{m|en|frangible}}), from {{der|en|ine-pro|*bʰreg-}} (English {{m|en|break}}).
+{{wikipedia}} No but seriously henners we discussed this earlier it always depends on how many legs the embryo develops while the direction of the prevailing wind is perpendicular to o the coast line
 
 ===Pronunciation===
 * {{enPR|frăkʹshən}}, {{IPA|en|/ˈfɹæk.ʃən/}}
