/* Malay */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <mega#61090352>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -217,6 +217,15 @@ From {{inh|id|ms|mega}}, from {{der|id|sa|मेघ|t=cloud}}.
 
 ----
 
+==Javanese==
+
+===Noun===
+{{jv-noun}}
+
+# {{dated spelling of|jv|méga}}
+
+----
+
 ==Malay==
 
 ===Etymology===
