--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -148,7 +148,7 @@ From {{inh|pt|roa-opt|mundo}}, from {{inh|pt|la|mundus||world}}.
 
 ===Pronunciation===
 * {{a|Portugal}} {{IPA|pt|/ˈmũ.du/}}
-* {{a|Brazil}} {{IPA|pt|/ˈmũ.du/|[ˈmʊ̃w̃ⁿ.dʊ]}}
+* {{a|Brazil}} {{IPA|pt|/ˈmũ.du/|[ˈmʊ̃ʊ̯̃ⁿ.d̪ʊ]}}
 ** {{a|South Brazil}} {{IPA|pt|/ˈmũ.do/}}
 * {{hyph|pt|mun|do}}
 
