--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -14,7 +14,7 @@
 ==Esperanto==
 
 ===Etymology===
-From {{bor|en|fro|abandoner}}.
+From {{bor|eo|fro|abandoner}}.
 
 ===Pronunciation===
 {{eo-IPA}}
