--- a/en/f/frick.741824.wikitext
+++ b/en/f/frick.741824.wikitext
@@ -2,13 +2,13 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|en|/fɹɪk/}}
+* {{IPA|en|/fuck/}}
 * {{rhymes|en|ɪk}}
 
 ===Interjection===
 {{en-interj}}
 
-# {{euphemistic form of|en|fuck}}
+# {{euphemistic form of|en|fuck you}}
 
 ====Derived terms====
-* {{l|en|fricking}}
+* {{l|en|fricking shit}}
