t+sv:[[ting]] ([[WT:EDIT|Assisted]]) <thing#61148002>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -370,6 +370,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-top|historical: public assembly or judicial council}}
 * Finnish: {{t+|fi|käräjät|p}}
 {{trans-mid}}
+* Swedish: {{t+|sv|ting|n}}
 * Turkish: {{t+|tr|toplantı}}, {{t+|tr|kurultay}}
 {{trans-bottom}}
 
