--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -320,6 +320,15 @@ From the verb {{m|fo|binda}}.
 
 ----
 
+==German==
+
+===Verb===
+{{head|de|verb form}}
+
+# {{inflected form of|de|binden}}
+
+----
+
 ==Norwegian Bokmål==
 
 ===Pronunciation===
