--- a/en/r/rasante.802841.wikitext
+++ b/en/r/rasante.802841.wikitext
@@ -49,9 +49,23 @@ From {{etyl|fr|en}} {{m|fr|rasant}}, present participle of {{m|fr|raser||to graz
 
 ----
 
+==Portuguese==
+===Etymology===
+From {{affix|pt|rasar|-ante}}.
+
+===Adjective===
+{{pt-adj|rasant|e}}
+# not above the aim
+# [[low]]-[[flying]]
+
+===Noun===
+{{pt-noun|f}}
+# low-flying traject
+
+----
+
 ==Spanish==
 
 ===Adjective===
 {{es-adj}}
-
 # [[low]]-[[flying]]
