/* Translations */ Added Plautdietsch translation. <then#61178286>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -113,6 +113,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
 * Old English: {{t|ang|þā}}
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
+* Plautdietsch: {{t|pdt|donn}}
 * Polish: {{t+|pl|wówczas}}, {{t+|pl|wtedy}}
 * Portuguese: {{t+|pt|então}}, {{t|pt|[[naquele]] [[tempo]]}}, {{t|pt|[[naquela]] [[época]]}}
 * Romanian: {{t+|ro|atunci}}
