--- a/en/r/rasante.802841.wikitext
+++ b/en/r/rasante.802841.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 From {{etyl|fr|en}} {{m|fr|rasant}}, present participle of {{m|fr|raser||to graze}}.
 
+===Pronunciation===
+{{rfp|en}}
+
 ===Adjective===
 {{en-adj}}
 
