--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -62,6 +62,7 @@ From {{bor|fr|arq|-}}, from {{der|fr|ar|بِلَاد}}
 {{fr-noun|m}}
 
 # {{lb|fr|somewhat|_|pejorative}} [[village]]
+#* {{quote-av|fr|title=Les Valseuses|writer={{w|Bertrand Blier}}|year=1974|actor=Patrick Dewaere|role=Pierrot|passage=D'abord j'en ai marre de ce '''bled'''! '''Bled''' de merde! France de merde!}}
 #* {{quote-song|fr|lyricist={{w|lang=en|Elh Kmer}}|title=Homicide|year=2017|album=Indépendant|passage=Je ferais pas d’efforts d’intégration si ce '''bled''' ne m’aime pas|translation=I won’t make any effort in order to be part of the community if this ''village'' doesn’t like me.}}
 
 ===Further reading===
