--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -82,7 +82,7 @@ From {{bor|ja|en|CD-ROM|sort=しいでぃいろむ}}.
 {{ja-pron|シーディー ロム|acc=5}}
 
 ===Noun===
-{{ja-noun|シー%ディー%-%ロム}}
+{{ja-noun|head=C%D%-%ROM|シー%ディー%-%ロム}}
 
 # {{lb|ja|computing|sort=しいでぃいろむ}} {{l|en|CD-ROM}}
 
