t+mul:[[🦡]] ([[WT:EDIT|Assisted]]) <badger#61198909>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -151,6 +151,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Taos: {{t|twf|kòlno’óna}}
 * Tatar: {{t+|tt|бурсык}}
 * Thai: {{t|th|แบดเจอร์}}
+* Translingual: {{t|mul|🦡 }}
 * Turkish: {{t+|tr|porsuk}}
 * Turkmen: {{t|tk|torsuk}}
 * Tuvan: {{t|tyv|морзук}}
