/* Alternative forms */ <bind#61199218>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -366,7 +366,7 @@ From the verb {{m|nb|binde}}
 ==Norwegian Nynorsk==
 
 ===Alternative forms===
-* {{alter|nn|bd||abbreviation}}
+* {{alter|nn|bd.||abbreviation}}
 
 ===Etymology===
 {{root|nn|ine-pro|*bʰendʰ-}}
