--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -549,6 +549,15 @@ From {{inh|da|non|at}}, cognate with {{cog|sv|att}}, {{cog|no|å}}. Originally t
 
 ----
 
+==Egyptian==
+
+===Romanization===
+{{head|egy|romanization}}
+
+# {{egy-alt|ꜥt|type=Manuel de Codage}}
+
+----
+
 ==Faroese==
 
 ===Pronunciation===
