--- a/en/e/ECG.26243.wikitext
+++ b/en/e/ECG.26243.wikitext
@@ -15,3 +15,12 @@
 
 ===Anagrams===
 * {{anagrams|en|a=ceg|GCE}}
+
+----
+
+==Spanish==
+
+===Noun===
+{{es-noun|m}}
+
+# {{lb|es|cardiology}} {{initialism of|es|electrocardiograma}}
