[[wikt:User:Suzukaze-c/AjaxEdit.js|Æ]] /* English */ * {{alter|en|moneygrubbing}} <money-grubbing#61210668>

--- a/en/m/money-grubbing.720246.wikitext
+++ b/en/m/money-grubbing.720246.wikitext
@@ -1,6 +1,9 @@
 {{also|moneygrubbing}}
 ==English==
 
+===Alternative forms===
+* {{alter|en|moneygrubbing}}
+
 ===Adjective===
 {{en-adj|head=[[money]]-[[grubbing]]}}
 
