t+yue:[[貪錢]] t+yue:[[贪钱]] t-balance ([[WT:EDIT|Assisted]]) <money-grubbing#61210671>

--- a/en/m/money-grubbing.720246.wikitext
+++ b/en/m/money-grubbing.720246.wikitext
@@ -11,5 +11,7 @@
 
 ====Translations====
 {{trans-top|fiercely avaricious for money}}
+* Chinese:
+*: Cantonese: {{t|yue|貪錢}}, {{t|yue|贪钱|tr=taam1 cin4-2}}
 {{trans-mid}}
 {{trans-bottom}}
