t+mnw:[[ပ္ဍဲ]] t-balance ([[WT:EDIT|Assisted]]) <at#61227665>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -117,8 +117,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Ladin: {{t-needed|lld}}
 * Ladino: {{t-needed|lad}}
 * Lao: {{t|lo|ທີ່}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|pi}}
+{{trans-mid}}
 * Latin: ''[[dative case]]'', {{t+|la|in}}
 * Latvian: {{t|lv|pie}}
 * Lithuanian: ''[[locative case]]'', {{t+|lt|pas}}
@@ -127,7 +127,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Maltese: {{t-needed|mt}}
 * Manchu: {{t|mnc|ᡩᡝ}}
 * Maori: {{t+|mi|i}} {{qualifier|in the past}}, {{t|mi|kei}} {{qualifier|present time}}, {{t|mi|hei}} {{qualifier|for future events}}, {{t|mi|a}} {{qualifier|for future events}}
-* Mon: {{t-needed|mnw}}
+* Mon: {{t|mnw|ပ္ဍဲ|tr=pḍay}}
 * Navajo: {{t|nv|-di}}, {{t|nv|-gi}}
 * Neapolitan: {{t|nap|a}}
 * Norwegian:
