/* Further reading */ DWDS <bitten#61238614>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -61,6 +61,7 @@ From {{inh|de|gmh|}}, from {{inh|de|goh|bitten}}, from {{inh|de|gem-pro|*bidjanÄ
 
 ===Further reading===
 * {{R:Duden}}
+* {{R:DWDS}}
 
 ----
 
