t+dng:[[щянсын]] t+yue:[[先生]] t-balance t+ps:[[آقا]] t+ps:[[آغا]] t+ps:[[ښاغلى]] t+kmr:[[birêz]] t+kmr:[[kek]] ([[WT:EDIT|Assisted]]) <sir#61253956>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -96,6 +96,8 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Burmese: {{t+|my|ဦး}}, {{t+|my|ခင်ဗျာ}} {{qualifier|used by males to address both males and females}}, {{t+|my|ရှင်}} {{qualifier|used by females to address both males and females}}
 * Catalan: {{t+|ca|senyor|m}}
 * Chinese:
+*: Cantonese: {{t|yue|先生|tr=sin1 saang1}}
+*: Dungan: {{t|dng|щянсын}}
 *: Mandarin: {{t+|cmn|先生|tr=xiānsheng}}
 *: Min Nan: {{t+|nan|先生|tr=sian-siⁿ, sin-seⁿ, sian-seⁿ}}
 * Czech: {{t+|cs|pan|m}}, {{t+|cs|pán|m}}, {{t+|cs|pane|m}} {{q|[[vocative case|vocative]]}}
@@ -123,6 +125,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Korean: {{t+|ko|선생님}}, {{t+|ko|씨|alt=-씨}}, {{t+|ko|아저씨}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|کاک}}
+*: Northern Kurdish: {{t+|kmr|birêz}}, {{t+|kmr|kek}}
 * Kyrgyz: {{t+|ky|господин}}, {{t|ky|мырза}}
 * Lao: {{t|lo|ທ່ານ}}, {{t|lo|ທ່ານເອີຽ}}
 * Latin: {{t+|la|dominus|m}}, {{t+|la|domine|m}} {{q|[[vocative case|vocative]]}}
@@ -136,6 +139,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Ndzwani Comorian: {{t|wni|mwenye}}
 * Norwegian:
 *: Bokmål: {{t+|nb|herre|m}}
+* Pashto: {{t|ps|آقا|m|tr=aqā}}, {{t|ps|آغا|m|tr=āǧã}}, {{t|ps|ښاغلى|m|tr=ӽāǧᶕlay}}
 * Persian: {{t+|fa|آقا|tr=âqâ}}, {{t+|fa|جناب|tr=jenâb}}
 * Polish: {{t+|pl|pan|m}}, {{t|pl|panie|m}} {{q|[[vocative case|vocative]]}}
 * Portuguese: {{t+|pt|senhor|m}}
