--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -4,7 +4,7 @@
 * {{audio|en|En-au-what's good.ogg|Audio (AU)}}
 
 ===Phrase===
-{{head|en|phrase|head=[[what]][['s]] [[good]]}}
+{{head|en|phrase}}
 
 # {{lb|en|colloquial}} [[what]] [[is]] [[good]], especially in reference to food.
 #: {{ux|en|'''What's good''' here? I'm way too indecisive to choose from a menu.}}
